--- a/lesson18/index.html
+++ b/lesson18/index.html
@@ -14,6 +14,7 @@
        .comment-container{
             font-style: italic;
             border: 3px solid black;
+            border-radius: 30px;
             margin-bottom: 10px;
            padding: 20px;
        }
